# oliver

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  RELEASE.md  codecov.yml  commitlint.config.js  docker-compose.yml  gh-pages  gh-pages.pub  index.html  index.md.bak  mkdocs.yml  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: black.yml  cd.yml  ci.yml  lint.yml  mypy.yml  pages.yml  pylint.yml  release.yml  stale.yml  tag.yml  tests.yml
advanced-guides/output-prefixing/: index.html
advanced-usage/: index.html
contributing/: index.html
docs/: ADVANCED_USAGE.md  CONFIGURATION.md  DEMO.md  DEVELOPMENT.md  README.md  SUBMIT.md  advanced-usage.md  guide.md
docs/advanced-guides/: output-prefixing.md
docs/getting-started/: configuration.md  monitor-jobs.md  submit-jobs.md
docs/integrations/: aws.md  azure.md
getting-started/configuration/: index.html
getting-started/monitor-jobs/: index.html
getting-started/submit-jobs/: index.html
guide/: index.html
integrations/aws/: index.html
integrations/azure/: index.html
mocks/cromwell/: Dockerfile  cromwell.conf
oliver/: __main__.py  api.py  azbatch.py  batch.py  config.py  constants.py  cosmos.py  errors.py  oliver.py  reporting.py  utils.py  workflows.py
oliver/integrations/aws/: aggregate.py  clean.py  debug.py
oliver/integrations/azure/: aggregate.py  batch.py  cosmos.py
oliver/lib/: api.py  args.py  batch.py  config.py  errors.py  oliver.py  parsing.py  reporting.py  utils.py  workflows.py
oliver/subcommands/: __template__.py  abort.py  aggregate.py  aws.py  azbatch.py  azure.py  batches.py  config.py  configure.py  cosmos.py  dummy.py  inputs.py  inspect.py  kill.py  logs.py  outputs.py  retry.py  runtime.py  status.py  submit.py
scripts/: oliver
search/: search_index.json
seeds/: seed.sh
seeds/wdl/: hello.wdl
stubs/: pendulum.pyi  tzlocal.pyi
tests/oliver/lib/: test_api.py  test_utils.py
