[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.5"]

[tool.poetry]
authors = [
  "Clay Mcleod <clay.mcleod@STJUDE.org>",
  "Jobin Sunny <jobin.sunny@STJUDE.org>",
  "Andrew Thrasher <andrew.thrasher@STJUDE.org>",
  "Andrew Frantz <andrew.frantz@STJUDE.org",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "An opinionated Cromwell orchestration system"
documentation = "https://stjudecloud.github.io/oliver/"
homepage = "https://stjudecloud.github.io/oliver/"
include = ["*.txt", "*.md"]
keywords = ["bioinformatics", "genomics", "workflows", "cromwell"]
license = "MIT"
name = "stjudecloud-oliver"
packages = [{ include = "oliver" }]
readme = "README.md"
repository = "https://github.com/stjudecloud/oliver"
version = "1.4.11"

[tool.poetry.scripts]
oliver = "oliver.__main__:main"

[tool.poetry.dependencies]
aiohttp = "^3.8"
azure-cosmos = "^4.3"
boto3 = "^1.26"
logzero = "^1.7"
mypy-boto3 = { extras = ["batch", "logs"], version = "^1.26" }
mypy_boto3_batch = "^1.26"
mypy_boto3_logs = "^1.26"
pendulum = "^2.1"
python = "^3.9"
requests = "^2.28"
tabulate = "^0.9"
typed-ast = "^1.5"
tzlocal = "<3.0.0"

[tool.poetry.dev-dependencies]
black = "^23"
boto3-stubs = "^1.26"
mkdocs = "^1.4"
mkdocs-bootswatch = "^1.1"
mypy = "0.910"
pydocstyle = "^6.3"
pylint = "^2"
pytest = "^7.2"
pytest-asyncio = "^0.21"
pytest-cov = "^4"
python-semantic-release = "^7.33"
rope = "^1.7"
types-tabulate = "^0.9"

[tool.semantic_release]
build_command = "poetry build"
commit_author = "St. Jude Cloud <support@stjude.cloud>"
commit_message = ""
commit_subject = "chore: bumping version to v{version}"
upload_to_release = "false"
version_source = "commit"
version_variable = "pyproject.toml:version"
# check_build_status = true

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | .*egg-info
)/
'''
include = '\.pyi?$'
target-version = ['py36', 'py37', 'py38']
